--- a/src/main/resources/home.fxml
+++ b/src/main/resources/home.fxml
@@ -43,9 +43,9 @@
          <Insets left="55.0" right="40.0" />
       </GridPane.margin>
    </Button>
-     <Button id="1" onAction="#levelpressed" prefHeight="33.0" prefWidth="61.0" text="Level1" GridPane.columnIndex="1" GridPane.rowIndex="5" />
-     <Button id="2" onAction="#levelpressed" prefHeight="32.0" prefWidth="62.0" text="Level2" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="5" />
-     <Button id="3" onAction="#levelpressed" prefHeight="33.0" prefWidth="64.0" text="Level3" GridPane.columnIndex="3" GridPane.rowIndex="5" />
+     <Button id="1" onAction="#levelPressed" prefHeight="33.0" prefWidth="61.0" text="Level1" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+     <Button id="2" onAction="#levelPressed" prefHeight="32.0" prefWidth="62.0" text="Level2" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="5" />
+     <Button id="3" onAction="#levelPressed" prefHeight="33.0" prefWidth="64.0" text="Level3" GridPane.columnIndex="3" GridPane.rowIndex="5" />
    <columnConstraints>
 
       <ColumnConstraints />
