--- a/src/main/resources/startgame.fxml
+++ b/src/main/resources/startgame.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.StartgameController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.StartgameController">
 
         <padding><Insets bottom="10.0" left="15.0" right="25.0" top="25.0" /></padding>
         <stylesheets> <String fx:value="styles.css" /> </stylesheets>
@@ -36,6 +36,6 @@
                 <Insets left="44.0" />
             </GridPane.margin>
         </Button>
-          <Button layoutX="308.0" layoutY="282.0" mnemonicParsing="false" onAction="#settingsPressed" prefHeight="25.0" prefWidth="71.0" text="Settings" textAlignment="JUSTIFY" />
+   <Button layoutX="302.0" layoutY="282.0" onAction="#resetGame" mnemonicParsing="false" text="Reset score" />
     
 </AnchorPane>
