--- a/src/main/resources/home.fxml
+++ b/src/main/resources/home.fxml
@@ -1,68 +1,76 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.String?>
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
+<?import java.lang.String?>
+<GridPane xmlns:fx="http://javafx.com/fxml/1" alignment="center" hgap="30" prefHeight="400.0" prefWidth="600.0"
+          vgap="20" xmlns="http://javafx.com/javafx/17"
+          fx:controller="de.sudoku.controller.HomeController">
 
-<GridPane alignment="center" hgap="30" prefHeight="400.0" prefWidth="600.0" vgap="20" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="de.sudoku.controller.HomeController">
-
-    <padding><Insets bottom="10" left="15" right="25" top="25" /></padding>
+    <padding>
+        <Insets bottom="10" left="15" right="25" top="25"/>
+    </padding>
     <gridLinesVisible>false</gridLinesVisible>
 
-    <stylesheets> <String fx:value="styles.css" /> </stylesheets>
+    <stylesheets>
+        <String fx:value="styles.css"/>
+    </stylesheets>
 
 
-    <HBox alignment="center" spacing="10" GridPane.columnIndex="1" GridPane.rowIndex="6" />
-    <HBox alignment="center" spacing="10" GridPane.columnIndex="2" GridPane.rowIndex="6" />
-    <HBox alignment="center" spacing="10" GridPane.columnIndex="3" GridPane.rowIndex="6" />
+    <HBox alignment="center" spacing="10" GridPane.columnIndex="1" GridPane.rowIndex="6"/>
+    <HBox alignment="center" spacing="10" GridPane.columnIndex="2" GridPane.rowIndex="6"/>
+    <HBox alignment="center" spacing="10" GridPane.columnIndex="3" GridPane.rowIndex="6"/>
 
-    <Text fx:id="actiontarget" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-   <AnchorPane prefHeight="95.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="1">
-      <children>
-          <Text fill="#2a2169" layoutX="39.0" layoutY="22.0" text="SUDOKU" textAlignment="CENTER" wrappingWidth="121.63091242313385">
-            <font>
-               <Font size="24.0" />
-            </font>
-         </Text>
-         <Label fx:id="lblSolvedGames" disable="true" text="0 games solved" layoutX="59.0" layoutY="63.0" />
-      </children></AnchorPane>
-    <Text fill="#2a2169" text="Choose level" textAlignment="CENTER" wrappingWidth="121.63091242313385" GridPane.columnIndex="2" GridPane.columnSpan="2" GridPane.rowIndex="4">
-      <GridPane.margin>
-         <Insets left="40.0" right="20.0" />
-      </GridPane.margin></Text>
-   <Button id="goBackHome" alignment="CENTER" mnemonicParsing="false" onAction="#goBackHome" text="Back to home" textAlignment="CENTER" GridPane.columnIndex="2" GridPane.rowIndex="7">
-      <GridPane.margin>
-         <Insets left="55.0" right="40.0" />
-      </GridPane.margin>
-   </Button>
-     <Button id="1" onAction="#levelPressed" prefHeight="33.0" prefWidth="61.0" text="Level1" GridPane.columnIndex="1" GridPane.rowIndex="5" />
-     <Button id="2" onAction="#levelPressed" prefHeight="32.0" prefWidth="62.0" text="Level2" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="5" />
-     <Button id="3" onAction="#levelPressed" prefHeight="33.0" prefWidth="64.0" text="Level3" GridPane.columnIndex="3" GridPane.rowIndex="5" />
-   <columnConstraints>
+    <Text fx:id="actiontarget" GridPane.columnIndex="1" GridPane.rowIndex="4"/>
+    <AnchorPane prefHeight="95.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="1">
+        <children>
+            <Text fill="#2a2169" layoutX="39.0" layoutY="22.0" text="SUDOKU" textAlignment="CENTER"
+                  wrappingWidth="121.63091242313385">
+                <font>
+                    <Font size="24.0"/>
+                </font>
+            </Text>
+            <Label fx:id="lblSolvedGames" disable="true" text="0 games solved" layoutX="59.0" layoutY="63.0"/>
+        </children>
+    </AnchorPane>
+    <Text fill="#2a2169" text="Choose level" textAlignment="CENTER" wrappingWidth="121.63091242313385"
+          GridPane.columnIndex="2" GridPane.columnSpan="2" GridPane.rowIndex="4">
+        <GridPane.margin>
+            <Insets left="40.0" right="20.0"/>
+        </GridPane.margin>
+    </Text>
+    <Button id="goBackHome" alignment="CENTER" mnemonicParsing="false" onAction="#goBackHome" text="Back to home"
+            textAlignment="CENTER" GridPane.columnIndex="2" GridPane.rowIndex="7">
+        <GridPane.margin>
+            <Insets left="55.0" right="40.0"/>
+        </GridPane.margin>
+    </Button>
+    <Button id="1" onAction="#levelPressed" prefHeight="33.0" prefWidth="61.0" text="Level1" GridPane.columnIndex="1"
+            GridPane.rowIndex="5"/>
+    <Button id="2" onAction="#levelPressed" prefHeight="32.0" prefWidth="62.0" text="Level2" GridPane.columnIndex="2"
+            GridPane.halignment="CENTER" GridPane.rowIndex="5"/>
+    <Button id="3" onAction="#levelPressed" prefHeight="33.0" prefWidth="64.0" text="Level3" GridPane.columnIndex="3"
+            GridPane.rowIndex="5"/>
+    <columnConstraints>
 
-      <ColumnConstraints />
-      <ColumnConstraints />
-      <ColumnConstraints />
-      <ColumnConstraints />
-   </columnConstraints>
-   <rowConstraints>
-      <RowConstraints />
-      <RowConstraints />
-      <RowConstraints />
-      <RowConstraints />
-      <RowConstraints />
-      <RowConstraints />
-      <RowConstraints />
-      <RowConstraints />
-      <RowConstraints />
-   </rowConstraints>
+        <ColumnConstraints/>
+        <ColumnConstraints/>
+        <ColumnConstraints/>
+        <ColumnConstraints/>
+    </columnConstraints>
+    <rowConstraints>
+        <RowConstraints/>
+        <RowConstraints/>
+        <RowConstraints/>
+        <RowConstraints/>
+        <RowConstraints/>
+        <RowConstraints/>
+        <RowConstraints/>
+        <RowConstraints/>
+        <RowConstraints/>
+    </rowConstraints>
 
 </GridPane>
