--- a/src/main/resources/startgame.fxml
+++ b/src/main/resources/startgame.fxml
@@ -1,41 +1,48 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.String?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
+<?import java.lang.String?>
+<AnchorPane xmlns:fx="http://javafx.com/fxml/1" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
+            prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17"
+            fx:controller="de.sudoku.controller.StartgameController">
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="de.sudoku.controller.StartgameController">
+    <padding>
+        <Insets bottom="10.0" left="15.0" right="25.0" top="25.0"/>
+    </padding>
+    <stylesheets>
+        <String fx:value="styles.css"/>
+    </stylesheets>
+    <Text fill="#2a2169" layoutX="239.0" layoutY="94.0" text="SUDOKU" textAlignment="CENTER"
+          wrappingWidth="121.63091242313385" GridPane.columnIndex="3" GridPane.columnSpan="2" GridPane.rowIndex="2">
+        <font>
+            <Font name="Calibri Light" size="18.0"/>
+        </font>
+        <GridPane.margin>
+            <Insets left="20.0"/>
+        </GridPane.margin>
+    </Text>
 
-        <padding><Insets bottom="10.0" left="15.0" right="25.0" top="25.0" /></padding>
-        <stylesheets> <String fx:value="styles.css" /> </stylesheets>
-        <Text fill="#2a2169" layoutX="239.0" layoutY="94.0" text="SUDOKU" textAlignment="CENTER" wrappingWidth="121.63091242313385" GridPane.columnIndex="3" GridPane.columnSpan="2" GridPane.rowIndex="2">
-            <font>
-                <Font name="Calibri Light" size="18.0" />
-            </font>
-            <GridPane.margin>
-                <Insets left="20.0" />
-            </GridPane.margin></Text>
+
+    <HBox alignment="center" spacing="10" GridPane.columnIndex="3" GridPane.rowIndex="9"/>
 
 
-        <HBox alignment="center" spacing="10" GridPane.columnIndex="3" GridPane.rowIndex="9" />
+    <Text fx:id="actiontarget" GridPane.columnIndex="2" GridPane.rowIndex="9"/>
+    <Button fx:id="Play" layoutX="220.0" layoutY="159.0" onAction="#playPressed" prefHeight="82.0" prefWidth="159.0"
+            text="Play" GridPane.columnIndex="3" GridPane.rowIndex="6">
+        <font>
+            <Font size="35.0"/>
+        </font>
+    </Button>
+    <Button layoutX="220.0" layoutY="282.0" mnemonicParsing="false" onAction="#exitGame" prefHeight="25.0"
+            prefWidth="71.0" text="Exit game" GridPane.columnIndex="3" GridPane.rowIndex="11">
+        <GridPane.margin>
+            <Insets left="44.0"/>
+        </GridPane.margin>
+    </Button>
+    <Button layoutX="302.0" layoutY="282.0" onAction="#resetGame" mnemonicParsing="false" text="Reset score"/>
 
-
-        <Text fx:id="actiontarget" GridPane.columnIndex="2" GridPane.rowIndex="9" />
-        <Button fx:id="Play" layoutX="220.0" layoutY="159.0" onAction="#playPressed" prefHeight="82.0" prefWidth="159.0" text="Play" GridPane.columnIndex="3" GridPane.rowIndex="6">
-            <font>
-                <Font size="35.0" />
-            </font>
-        </Button>
-        <Button layoutX="220.0" layoutY="282.0" mnemonicParsing="false" onAction="#exitGame" prefHeight="25.0" prefWidth="71.0" text="Exit game" GridPane.columnIndex="3" GridPane.rowIndex="11">
-            <GridPane.margin>
-                <Insets left="44.0" />
-            </GridPane.margin>
-        </Button>
-   <Button layoutX="302.0" layoutY="282.0" onAction="#resetGame" mnemonicParsing="false" text="Reset score" />
-    
 </AnchorPane>
